# mobile_robot_planning

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/apf_planner/lib/apf_planner/: apf_node
install/apf_planner/share/apf_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/apf_planner/share/apf_planner/launch/: planner.launch.py
install/camera_processing/lib/camera_processing/: camera_node
install/camera_processing/share/camera_processing/: package.ps1  package.sh  package.xml
install/lidar_processing/lib/lidar_processing/: lidar_filter_node
install/lidar_processing/share/lidar_processing/: package.ps1  package.sh
install/lidar_processing/share/lidar_processing/launch/: lidar.launch.py
install/obstacle_msgs/include/obstacle_msgs/obstacle_msgs/msg/: obstacle.h  obstacle.hpp  obstacle_array.h  obstacle_array.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/obstacle_msgs/share/ament_index/resource_index/package_run_dependencies/: obstacle_msgs
install/obstacle_msgs/share/obstacle_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/obstacle_msgs/share/obstacle_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_obstacle_msgs__rosidl_generator_cExport-noconfig.cmake  export_obstacle_msgs__rosidl_generator_cppExport.cmake  export_obstacle_msgs__rosidl_generator_pyExport-noconfig.cmake  export_obstacle_msgs__rosidl_generator_pyExport.cmake  export_obstacle_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_obstacle_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  obstacle_msgsConfig-version.cmake  obstacle_msgsConfig.cmake  obstacle_msgs__rosidl_typesupport_cExport.cmake  obstacle_msgs__rosidl_typesupport_cppExport-noconfig.cmake  obstacle_msgs__rosidl_typesupport_cppExport.cmake  obstacle_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/obstacle_msgs/share/obstacle_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/obstacle_msgs/share/obstacle_msgs/msg/: Obstacle.idl  Obstacle.json  Obstacle.msg  ObstacleArray.idl  ObstacleArray.json  ObstacleArray.msg
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_description/share/robot_description/cmake/: robot_descriptionConfig-version.cmake  robot_descriptionConfig.cmake
install/robot_description/share/robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/robot_description/share/robot_description/launch/: display.launch.py
install/robot_description/share/robot_description/rviz/: robot.rviz
install/robot_description/share/robot_description/urdf/: robot.urdf.xacro
install/robot_simulation/lib/robot_simulation/: goal_publisher.py
install/robot_simulation/share/robot_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_simulation/share/robot_simulation/cmake/: robot_simulationConfig-version.cmake  robot_simulationConfig.cmake
install/robot_simulation/share/robot_simulation/config/: bridge.yaml
install/robot_simulation/share/robot_simulation/environment/: ament_prefix_path.dsv  path.dsv
install/robot_simulation/share/robot_simulation/launch/: full_system.launch.py  simulation.launch.py
install/robot_simulation/share/robot_simulation/worlds/: obstacle_world.world
install/sensor_fusion/lib/sensor_fusion/: fusion_node
install/sensor_fusion/share/sensor_fusion/: package.sh  package.xml
install/sensor_fusion/share/sensor_fusion/launch/: fusion.launch.py
log/: latest_build
src/apf_planner/: package.xml  setup.py
src/apf_planner/apf_planner/: apf_node.py
src/apf_planner/launch/: planner.launch.py
src/camera_processing/: setup.py
src/camera_processing/camera_processing/: camera_node.py
src/camera_processing/launch/: camera.launch.py
src/evaluation/: package.xml  setup.py
src/evaluation/evaluation/: eval_node.py
src/evaluation/launch/: eval.launch.py
src/evaluation/scripts/: plot_results.py
src/lidar_processing/: package.xml  setup.py
src/lidar_processing/lidar_processing/: lidar_filter_node.py
src/mpc_controller/: package.xml  setup.py
src/mpc_controller/launch/: mpc.launch.py
src/mpc_controller/mpc_controller/: __init__.py  mpc_node.py
src/obstacle_msgs/: CMakeLists.txt  package.xml
src/obstacle_msgs/msg/: Obstacle.msg  ObstacleArray.msg
src/planner_supervisor/: package.xml  setup.cfg  setup.py
src/planner_supervisor/launch/: supervisor.launch.py
src/planner_supervisor/planner_supervisor/: __init__.py  supervisor_node.py
src/planner_supervisor/resource/: planner_supervisor
src/rl_planner/: package.xml  setup.py
src/rl_planner/launch/: rl.launch.py
src/rl_planner/resource/: rl_planner
src/rl_planner/rl_planner/: rl_env.py  rl_node.py
src/rl_planner/scripts/: train_rl.py
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: robot.rviz
src/robot_description/urdf/: robot.urdf.xacro
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/config/: bridge.yaml
src/robot_simulation/launch/: full_system.launch.py  simulation.launch.py
src/robot_simulation/scripts/: dynamic_mover.py  goal_publisher.py  pedestrian_mover.py
src/robot_simulation/worlds/: obstacle_world.world
src/sensor_fusion/: setup.py
src/sensor_fusion/sensor_fusion/: fusion_node.py
(+28 files in other folders)
