<?xml version="1.0"?>
<package format="3">
  <name>lidar_processing</name>
  <version>1.0.0</version>
  <description>LiDAR preprocessing: invalid-return filtering, median noise reduction, obstacle point-cloud extraction</description>
  <maintainer email="student@university.edu">Sunil Bishnoi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
