<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_supervisor</name>
  <version>1.0.0</version>
  <description>Planner supervisor: orchestrates switching between APF, MPC, and RL planners</description>
  <maintainer email="student@university.edu">Sunny Kumar</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_python</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
