<?xml version="1.0"?>
<package format="3">
  <name>robot_simulation</name>
  <version>1.0.0</version>
  <description>Gazebo simulation world, launch files, and models for mobile robot path planning</description>
  <maintainer email="student@university.edu">Sunil Bishnoi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
