<?xml version="1.0"?>
<package format="3">
  <name>apf_planner</name>
  <version>1.0.0</version>
  <description>APF path planner: conic-well attractive potential, inverse-square repulsive field (d0=1.5m), local minima escape</description>
  <maintainer email="student@university.edu">Sunil Bishnoi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
