<?xml version="1.0"?>
<package format="3">
  <name>camera_processing</name>
  <version>1.0.0</version>
  <description>Camera preprocessing node: rectification, Gaussian blur, HSV colour segmentation, ObstacleArray publishing</description>
  <maintainer email="student@university.edu">Sunny Kumar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>obstacle_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
