<?xml version="1.0"?>
<package format="3">
  <name>sensor_fusion</name>
  <version>1.0.0</version>
  <description>LiDAR-camera fusion: ApproximateTime sync, 3-D projection, fused obstacle map</description>
  <maintainer email="student@university.edu">Sunny Kumar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>obstacle_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
